# PyPiCounter

./: .gitignore  License  README.md  function_count.py  pyproject.toml  setup.py
.github/: cspell.json  pull_request_template.md
.github/workflows/: main.yml
PyPiCount/: command_line_interface.py
hello/: say_hello.py
input/: sample_file.py
pypi_count/: command_line_interface.py  py_counter.py
setuptools-60.5.0/: setup.cfg
src/: command-line-interface.py  command_line_interface.py  definition-counter.py  parse.py  py_counter.py
tests/: importTest.py  import_test.py  test_command_line_interface.py  test_py_counter.py  test_say_hello.py
tests/input/: sample_file.py
writing/: README.md
